adding 3 lines of css to debug library with better fashion

--- a/demo.htm
+++ b/demo.htm
@@ -2,6 +2,17 @@
 <html>
  <head>
   <title>Lemmings</title>
+  <style type="text/css">
+    output,
+    #global_result,
+    #elapsed,
+    #log
+    { 
+      display: block; 
+      font-family: Consolas;
+      font-size: 12px;
+    }
+  </style>
  </head>
  <body>
   <h1>The Lemmings Theory</h1>
