adding a message prototype to factorize communication between master & workers... still a lot of work to do

--- a/demo.htm
+++ b/demo.htm
@@ -29,6 +29,6 @@
   <pre id="log"></pre>
   
   <script type="text/javascript" src="src/lemmings/lemmings.js"></script>
-  <script type="text/javascript" src="demos/pi/master.js"></script>
+  <script type="text/javascript" src="demos/pi_bis/master.js"></script>
  </body>
 </html>
