removing runtime script imports

--- a/demo.htm
+++ b/demo.htm
@@ -13,6 +13,11 @@
       font-size: 12px;
     }
   </style>
+  <script type="text/javascript" src="src/lemmings/lemmings.js"></script>
+  <script type="text/javascript" src="src/lemmings/exceptions.js"></script>
+  <script type="text/javascript" src="src/lemmings/lib.js"></script>
+  <script type="text/javascript" src="src/lemmings/master.js"></script>
+  <script type="text/javascript" src="src/lemmings/messages.js"></script>
  </head>
  <body>
   <h1>The Lemmings Theory</h1>
@@ -28,7 +33,6 @@
   <h2>Logs</h2>
   <pre id="log"></pre>
   
-  <script type="text/javascript" src="src/lemmings/lemmings.js"></script>
   <script type="text/javascript" src="demos/pi/main.js"></script>
  </body>
 </html>
